# alpha-forge-skill

./: .gitignore  README.md  SKILL.md
references/: backtesting.md  canslim.md  data-fetching.md  dca.md  faq.md  live-signal.md  ml-strategy.md  multi-factor.md  pairs-trading.md  portfolio.md  scoring.md  sentiment.md  strategies.md  stress-testing.md  (+1 more)
scripts/: account.py  cli_common.py  cli_config.py  datafeed.py  envconfig.py  errors.py  market.py  naming.py  notify.py  profile.py  pyproject.toml  run_account.py  run_backtest.py  run_canslim.py  run_compare.py  run_custom.py  run_dashboard.py  run_dca.py  run_event.py  run_factor.py  run_list.py  run_ml.py  run_optimize.py  run_pairs.py  run_paper.py  run_portfolio.py  run_profile.py  run_scan.py  run_score.py  run_screener.py  run_sentiment.py  run_signal.py  run_validate.py  run_verify.py  utils.py
scripts/backtest/: __init__.py  costs.py  engine.py  ledger.py  metrics.py  optimize.py  plot.py  rules.py
scripts/canslim/: __init__.py  engine.py  fundamentals.py
scripts/data/: __init__.py  cache.py  dividends.py  fundamentals.py  macro.py  sources.py  valuation.py  verify.py
scripts/dca/: __init__.py  engine.py  metrics.py  plot.py
scripts/examples/: backtest.toml  custom_rule.toml
scripts/factors/: __init__.py  analysis.py  library.py  model.py  plot.py  preprocess.py
scripts/metrics/: __init__.py
scripts/ml/: __init__.py  features.py  labeling.py  model.py  plot.py
scripts/pairs/: __init__.py  plot.py  select.py  strategy.py
scripts/paper/: __init__.py  state.py  summary.py
scripts/portfolio/: __init__.py  engine.py  optimize.py  plot.py  rotation.py
scripts/report/: __init__.py  console.py  html.py  serialize.py
scripts/research/: __init__.py  event_study.py  regime.py  validation.py  walk_forward.py
scripts/risk/: __init__.py  attribution.py  limits.py  metrics.py  stress.py
scripts/scoring/: __init__.py  engine.py  indicators.py  plan.py  plot.py  present.py  replay.py  scan.py
scripts/screener/: __init__.py  data.py  engine.py
scripts/sentiment/: __init__.py  model.py  news.py  plot.py  score.py
scripts/strategies/: __init__.py  base.py  bollinger.py  cci.py  custom.py  donchian.py  dual_thrust.py  grid_trading.py  indicators.py  kdj.py  keltner.py  ma_cross.py  macd.py  momentum.py  rsi.py  supertrend.py  turtle.py  williams_r.py
scripts/tests/: conftest.py  helpers.py  test_account.py  test_architecture.py  test_cache.py  test_canslim.py  test_cli_common.py  test_cli_config.py  test_cli_contract.py  test_cli_e2e.py  test_cli_help.py  test_compare.py  test_costs_rules.py  test_custom_dsl.py  test_dashboard.py  test_datafeed_retry.py  test_datasources.py  test_dca.py  test_engine.py  test_errors.py  test_event_study.py  test_factor_analysis.py  test_factor_library.py  test_fetch_events.py  test_html_report.py  test_json_schema.py  test_ledger.py  test_metrics.py  test_ml.py  test_notify.py  test_optimize_parallel.py  test_p2_features.py  test_pairs.py  test_paper_score.py  test_portfolio.py  test_profile.py  test_regime.py  test_report.py  test_risk.py  test_scan.py  (+8 more)
(+1 files in other folders)
