[project]
name = "tickflow-quant"
version = "0.1.0"
description = "TickFlow quant strategies and backtesting toolkit"
requires-python = ">=3.10"
dependencies = [
    "tickflow[all]>=0.1.17",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "lightgbm>=4.0.0",
    "akshare>=1.13.0",
]

[tool.setuptools]
packages = ["strategies", "backtest", "portfolio", "factors", "pairs", "ml", "sentiment"]
