[project]
name = "tickflow-quant"
version = "0.1.0"
description = "TickFlow quant strategies and backtesting toolkit"
requires-python = ">=3.10"
dependencies = [
    "tickflow[all]>=0.1.17",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "lightgbm>=4.0.0",
    "akshare>=1.13.0",
    "rich>=13.0.0",
    "scikit-learn>=1.3.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools]
packages = ["strategies", "backtest", "portfolio", "factors", "pairs", "ml", "sentiment", "dca", "data", "research", "report", "risk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
