[project]
name = "tickflow-quant"
version = "0.1.0"
description = "TickFlow quant strategies and backtesting toolkit"
requires-python = ">=3.10"
dependencies = [
    "tickflow[all]>=0.1.17",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "lightgbm>=4.0.0",
    "akshare>=1.13.0",
    "baostock>=0.8.8",
    "yfinance>=0.2.40",
    "rich>=13.0.0",
    "scikit-learn>=1.3.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools]
packages = [
    "strategies", "backtest", "portfolio", "factors", "pairs",
    "ml", "sentiment", "dca", "data", "research", "report",
    "risk", "scoring", "canslim", "metrics",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # 行长由 line-length 控制，不重复报错

[tool.ruff.lint.isort]
known-first-party = [
    "strategies", "backtest", "portfolio", "factors", "pairs",
    "ml", "sentiment", "dca", "data", "research", "report",
    "risk", "scoring", "canslim", "metrics", "market",
    "cli_common", "cli_config", "envconfig", "errors",
    "datafeed", "naming", "notify", "account", "utils",
]

[tool.coverage.run]
source = [
    "strategies", "backtest", "scoring", "portfolio", "dca",
    "ml", "factors", "pairs", "research", "risk", "canslim",
    "sentiment", "metrics", "data", "report",
]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
